# office-crypto

./: .gitignore  Cargo.toml  LICENSE  README.md  testFile.docx
benches/: agile.rs  bench.rs
src/: crypto.rs  lib.rs  main.rs  ole.rs
src/format/: doc97.rs  mod.rs
src/method/: mod.rs  rc4.rs
tests/: agile_sha512.rs  decrypt.rs
tests/files/: expectedAgileSha512.docx  expectedAgileSha512.xlsx  testAgileSha512.docx  testAgileSha512.xlsx
tests/utils/: mod.rs
