[package]
name = "office-crypto"
version = "0.1.0"
authors = ["Udbhav Muthakana"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/udbhav1/office-crypto"
description = "Pure Rust library to decrypt password-protected MS Office files"
keywords = ["docx", "xlsx", "pptx", "openxml", "crypto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packed_struct = "0.10"
bytemuck = "1.12.3"
derivative = "2.2.0"
quick-xml = "0.27.1"
base64 = "0.21.0"
sha2 = "0.10.6"
aes = "0.8.2"
cbc = { version = "0.1.2", features = ["block-padding"] }
docx = "1.1.2"
