[package]
name = "office-crypto"
version = "0.1.0"
authors = ["Udbhav Muthakana"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/udbhav1/office-crypto"
homepage = "https://github.com/udbhav1/office-crypto"
description = "Pure Rust library to decrypt password-protected MS Office files"
keywords = ["docx", "xlsx", "pptx", "openxml", "crypto"]
categories = ["parsing"]
exclude = [
    "tests/",
]

[lib]
name = "office_crypto"
path = "src/lib.rs"

[dependencies]
packed_struct = "0.10"
bytemuck = "1.12.3"
derivative = "2.2.0"
quick-xml = "0.27.1"
base64 = "0.21.0"
sha1 = "0.10.5"
sha2 = "0.10.6"
aes = "0.8.2"
cbc = { version = "0.1.2", features = ["block-padding"] }
ecb = "0.1.1"
thiserror = "1.0.38"

[dev-dependencies]
bencher = "0.1.5"
docx = "1.1.2"

[[bench]]
name = "bench"
harness = false
